zig_build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef int32_t angularMode_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
typedef real_t decNumber;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
typedef realContext_t decContext;
enum {
  amRadian = 0,
  amDegree = 2,
  amNone = 5,
  amPolar = 16,
  amAngleMask = 15,
};
#define DECINF 0x40
#define DECNAN 0x20
#define DECSNAN 0x10
#define DECSPECIAL 0x70
#define REGISTER_X ((calcRegister_t)100)
#define REGISTER_Z ((calcRegister_t)102)
#define ERR_REGISTER_LINE REGISTER_Z
#define ERROR_ARG_EXCEEDS_FUNCTION_DOMAIN 1
#define FLAG_SPCRES 0x8017
#define DECNEG 0x80
#define realChangeSign(operand) ((operand)->bits ^= 0x80)
#define realIsSpecial(source) (((source)->bits & DECSPECIAL) != 0)
#define realIsNaN(source) (((source)->bits & (DECNAN | DECSNAN)) != 0)
#define realIsNegative(source) (((source)->bits & 0x80) != 0)
#define realIsZero(source) ((source)->lsu[0] == 0 && !realIsSpecial(source))
#define realMultiply(operand1, operand2, res, ctxt) decNumberMultiply((res), (operand1), (operand2), (ctxt))
#define realDivide(operand1, operand2, res, ctxt) decNumberDivide((res), (operand1), (operand2), (ctxt))
#define realAdd(operand1, operand2, res, ctxt) decNumberAdd((res), (operand1), (operand2), (ctxt))
#define realSubtract(operand1, operand2, res, ctxt) decNumberSubtract((res), (operand1), (operand2), (ctxt))
extern realContext_t ctxtReal39;
extern const real_t *const_NaN;
#define realSetPlusInfinity(value) realCopy(const_plusInfinity, (value))
#define realCompareGreaterEqual(number1, number2) (!realCompareLessThan((number1), (number2)))
#define realCompareLessEqual(number1, number2) (!realCompareLessThan((number2), (number1)))
bool_t saveLastX(void);
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void adjustResult(calcRegister_t res,
                  bool_t dropY,
                  bool_t setCpxRes,
                  calcRegister_t op1,
                  calcRegister_t op2,
                  calcRegister_t op3);
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
bool_t getRegisterAsReal(calcRegister_t reg, real_t *value);
void convertRealToResultRegister(const real_t *real, calcRegister_t dest, angularMode_t angle_mode);
void C47_WP34S_Atan(const real_t *x, real_t *angle, realContext_t *real_context);
decNumber *decNumberMultiply(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
decNumber *decNumberDivide(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
decNumber *decNumberAdd(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
decNumber *decNumberSubtract(decNumber *result, const decNumber *lhs, const decNumber *rhs, decContext *real_context);
bool_t realCompareEqual(const real_t *number1, const real_t *number2);
bool_t realCompareLessThan(const real_t *number1, const real_t *number2);
void realSetZero(real_t *value);
bool_t getSystemFlag(int32_t flag);
void moreInfoOnError(const char *msg1, const char *msg2, const char *msg3, const char *msg4);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
const real_t *z47_math_wrappers_const_0(void);
const real_t *z47_math_wrappers_const_1(void);
const real_t *z47_math_wrappers_const_1on2(void);
const real_t *z47_math_wrappers_const_pi(void);